--- a/src/app/components/subscriber/subscriber/subscriber.component.css
+++ b/src/app/components/subscriber/subscriber/subscriber.component.css
@@ -15,3 +15,12 @@ select{
 b{
     margin: 10px !important;
 }
+.infos{
+    border: 1px solid #86bff9 !important;
+    padding: 20px;
+    padding-bottom: 60px;
+    border-top-left-radius: 70px;
+    border-bottom-right-radius: 70px;
+    box-shadow: 5px 14px 10px 0px #6c757d66;
+
+}
