--- a/src/app/components/materiel/materiel.component.html
+++ b/src/app/components/materiel/materiel.component.html
@@ -30,6 +30,9 @@
                         {{materiel[col.field]}}
 
                     </td>
+                    <td *ngIf="materiel.subscriber!=null">
+                        {{materiel.subscriber.nom_subscriber}} {{materiel.subscriber.prenom_subscriber}}
+                    </td>
                     <td>
                         
                         <div *ngIf="materiel.subscriber==null">
@@ -130,6 +133,21 @@
                     </div>
                     <div class="ui-g-8">
                         <select class="ui-g-8" name="subscriber" id="subscriber" [(ngModel)]="subscriber">
+                            <option [ngValue]="null">No one</option>
+                            <option *ngFor="let subscriber of subscribers" [ngValue]="subscriber.id_subscriber">
+                                {{subscriber.num_sim}}</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+
+            <div class="ui-g ui-fluid">
+                <div class="ui-g-12">
+                    <div class="ui-g-4">
+                        <label for="abonnement"><b>Motif:</b></label>
+                    </div>
+                    <div class="ui-g-8">
+                        <select class="ui-g-8" name="subscriber" id="subscriber" editable="true" [(ngModel)]="subscriber">
                             <option [ngValue]="null">No one</option>
                             <option *ngFor="let subscriber of subscribers" [ngValue]="subscriber.id_subscriber">
                                 {{subscriber.num_sim}}</option>
