--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,13 @@
         <app-header></app-header>
         <app-menu></app-menu>
     </div>
+    
     <div style=" margin-top: 95px; width: 929px;">
-        <router-outlet></router-outlet>
+        <router-outlet> </router-outlet>
     </div>
 </div>
+<!--footer>
+    @Copyright--MICHOC
+</footer-->
+
 <!--app-auth></app-auth-->
