--- a/src/app/components/historique/historique.component.html
+++ b/src/app/components/historique/historique.component.html
@@ -2,7 +2,7 @@
     <p-toast></p-toast>
     <p-confirmDialog header="Confirmation" acceptLabel="Oui" rejectLabel="Non" icon="pi pi-exclamation-triangle">
     </p-confirmDialog>
-    <p-panel header="Gestion de materiels" [style]="{'width':'80%'}">
+    <p-panel header="Historique de matériels" [style]="{'width':'80%'}">
         <p-table [value]="historiques" [columns]="cols" selectionMode="single" [(selection)]="historique"
             dataKey="serial_number" [paginator]="true" [rows]="4">
             <ng-template pTemplate="header" let-columns>
@@ -14,6 +14,9 @@
                             arialLabelAsc="Activate to sort in ascending order"></p-sortIcon>
                     </th>
                     <th>
+                        Justification
+                    </th>
+                    <th>
                         Materiel
                         <p-sortIcon  ariaLabel="Activate to sort"
                         ariaLabelDesc="Activate to sort in descending order"
@@ -22,9 +25,12 @@
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-historique let-columns="columns">
-                <tr [pSelectableRow]="historique">
+                <tr >
                     <td *ngFor="let col of columns">
                         {{historique[col.field]}}
+                    </td>
+                    <td>
+                        {{historique.materiel.justification}}
                     </td>
                     <td>
                         {{historique.materiel.id_materiel}}
