--- a/src/app/components/materiel/materiel.component.css
+++ b/src/app/components/materiel/materiel.component.css
@@ -1,7 +1,7 @@
 .p-panel .p-panel-header {
     border: 1px solid #dee2e6;
     padding: 1rem;
-    background: #86bff9;
+    background: #87cace;
     color: #f8f9fa;
     border-top-right-radius: 3px;
     border-top-left-radius: 3px;
