--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,32 +3,33 @@
   </div>
    
   <ng-template #loggedOut>
-    <div class="row col-sm-6" style="max-width:350px;">
+    <div class="row col-sm-6" >
+        <h2>Signin</h2>
+        <i class="pi pi-fw pi-lock"></i>
       <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
         <div class="form-group">
-          <label for="username">Username</label>
+          <label for="username">Username</label><br>
           <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
             required />
           <div *ngIf="f.submitted && username.invalid">
-            <div *ngIf="username.errors">Username is required</div>
+            <div style="color:rgb(209, 52, 52);" *ngIf="username.errors">Username is required</div>
           </div>
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
+          <label for="password">Password</label><br>
           <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
             required minlength="6" />
           <div *ngIf="f.submitted && password.invalid">
-            <div *ngIf="password.errors">Password is required</div>
-            <div *ngIf="password.errors">Password must be at least 6 characters</div>
+            <div style="color:rgb(209, 52, 52);" *ngIf="password.errors">Password is required</div>
+            <div style="color:rgb(209, 52, 52);" *ngIf="password.errors">Password must be at least 6 characters</div>
           </div>
         </div>
         <div class="form-group">
           <button class="btn btn-primary">Login</button>
-          <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
+          <div style="color:rgb(209, 52, 52);" *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
             Login failed: {{errorMessage}}
           </div>
         </div>
       </form>
-      <hr />
     </div>
   </ng-template>
